--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
       <h3>Example return:</h3>
       <code>{"stockData":{"stock":"GOOG","price":"786.90","likes":1}}</code><br>
       <code>{"stockData":[{"stock":"MSFT","price":"62.30","rel_likes":-1},{"stock":"GOOG","price":"786.90","rel_likes":1}]}</code>
+      <a href="https://caramel-textbook.glitch.me">https://caramel-textbook.glitch.me</a>
     </div>
     <hr style='margin: 50px'>
     <div id='testui' style='margin-left: 5%'>
